# dndwright

./: .gitignore  CHANGELOG.md  NOTICE  PLAN.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  combat.py  compose.py  conditions.py  content_components.py  custom_operation.py  dice.py  export_graph.py  feat_components.py  gated_contributions.py  initiative.py  multiclass.py  quickstart.py  stat_diff.py  weapon_attack.py
src/dndwright/: __init__.py  cli.py
src/dndwright/combat/: __init__.py  combat.py  conditions.py  initiative.py  weapons.py
src/dndwright/content/: __init__.py  armor.json  backgrounds.json  classes.json  conditions.json  creatures.json  feats.json  generate.py  magic_items.json  models.py  species.json  spells.json  weapons.json
src/dndwright/dice/: __init__.py  engine.py
src/dndwright/ontology/: __init__.py  dnd.yaml  loader.py
src/dndwright/rules/: __init__.py  adapters.py  assembler.py  character_evaluator.py  components.py  compose.py  dnd_5e_2024.py  evaluator.py  export.py  homebrew_validator.py  lookup_tables.py  operations.py  schema.py  theme_scaling.py  validation.py
tests/: test_adapters_bugs.py  test_api_contract.py  test_background_components.py  test_backgrounds.py  test_character_theme_scaling.py  test_classes.py  test_cli.py  test_combat.py  test_combat_api_contract.py  test_compose.py  test_conditions.py  test_content.py  test_content_components.py  test_content_models.py  test_creatures.py  test_defenses_and_serialization.py  test_dice.py  test_dice_api_contract.py  test_engine.py  test_evaluate_character_components.py  test_evaluator_cache.py  test_examples.py  test_export.py  test_feat_components.py  test_gated_contributions.py  test_homebrew_validator.py  test_initiative.py  test_input_validation.py  test_ontology.py  test_operations_registry.py  test_properties.py  test_public_graph_api.py  test_species_components.py  test_spell_components.py  test_spells.py  test_theme_scaling.py  test_validation.py  test_weapon_attack.py  test_weapons_armor.py
