[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dndwright"
version = "0.2.0"
description = "Domain-neutral D&D 5e (2024) rules & character-sheet computation engine: a data-driven DAG of formulas (ability mods, proficiency, spell DC/slots, HP, AC)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthony Sligar" }]
keywords = ["dnd", "dnd5e", "ttrpg", "rules-engine", "character-sheet", "srd", "computation-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = ["pydantic>=2.5", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/sligara7/dndwright"
Repository = "https://github.com/sligara7/dndwright"

[tool.hatch.build.targets.wheel]
packages = ["src/dndwright"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
