[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dndwright"
version = "0.11.0"
description = "Domain-neutral D&D 5e (2024) rules & character-sheet computation engine: a data-driven DAG of formulas (ability mods, proficiency, spell DC/slots, HP, AC)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthony Sligar" }]
keywords = ["dnd", "dnd5e", "ttrpg", "rules-engine", "character-sheet", "srd", "computation-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.5", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "hypothesis>=6.0"]

[project.scripts]
dndwright = "dndwright.cli:main"

[project.urls]
Homepage = "https://github.com/sligara7/dndwright"
Repository = "https://github.com/sligara7/dndwright"
Changelog = "https://github.com/sligara7/dndwright/blob/main/CHANGELOG.md"
Issues = "https://github.com/sligara7/dndwright/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dndwright"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
